@@ -495,6 +495,7 @@
                 ofaCurrenciesPage -> ofaCurrencyPage
                 ofaLedgersPage -> ofaLedgerPage
                 ofaLedgersBookBin -> ofaLedgerBookBin
+                ofaLedgersBookRender -> ofaLedgerBookRender
 
  845 2015-10- 1 have a UserCredentialsBin to be used in DossierLogin
                 and DossierOpen
